# illumminate

./: Gemfile  README.md  _config.yml  about.markdown
_posts/: 2020-06-21-simd.md  2020-06-28-environment-setup.md  2020-07-19-memory-allocator.md
include/gfx/win32/: win32_window.h
include/illuminate/: illuminate.h
include/illuminate/core/: assert.h  def.h  logger.h  memory.h  strid.h  util.h
include/illuminate/gfx/win32/: win32_handle.h  win32_window.h
include/illuminate/math/: vector.h
scripts/: build-all.sh  build.bat  build.sh  make.bat
src/: illuminate_assert.h  illuminate_logger.h  logger.h  minimal_for_cpp.h
src/core/: CMakeLists.txt  illuminate_memory.cpp  illuminate_memory.h  memory.cpp  strid.cpp  util.cpp
src/gfx/: CMakeLists.txt  gfx_def.h  gfx_test.cpp  render_graph.cpp  render_graph.h  renderer.cpp  renderer.h
src/gfx/d3d12/: CMakeLists.txt  d3d12_command_allocator.cpp  d3d12_command_allocator.h  d3d12_command_executor.cpp  d3d12_command_list.cpp  d3d12_command_list.h  d3d12_command_queue.cpp  d3d12_command_queue.h  d3d12_descriptor_heap.cpp  d3d12_descriptor_heap.h  d3d12_device.cpp  d3d12_device.h  d3d12_dxgi_core.cpp  d3d12_dxgi_core.h  d3d12_header_common.h  d3d12_minimal_for_cpp.h  d3d12_renderer.cpp  d3d12_renderpass_command_sample.cpp  d3d12_shader_compiler.cpp  d3d12_shader_compiler.h  d3d12_shader_visible_descriptor_heap.cpp  d3d12_shader_visible_descriptor_heap.h  d3d12_shader_visible_descriptor_heap_test.inl  d3d12_swapchain.cpp  d3d12_swapchain.h  d3d12_test.cpp  d3d12_test_code.cpp  d3d12_util.cpp  d3d12_util.h
src/gfx/shader/test/: copysrv.ps.hlsl  copyuav.ps.hlsl  fill-screen.cs.hlsl  fullscreen-triangle.hlsli  fullscreen-triangle.vs.hlsl  test-cbv.ps.hlsl  test.ps.hlsl  test.vs.hlsl
src/gfx/win32/: CMakeLists.txt  win32_handle.cpp  win32_window.cpp
src/math/: CMakeLists.txt  main.cpp  vec_test.cpp
